--- a/tests/auto/widgets/qwebengineview/tst_qwebengineview.qrc
+++ b/tests/auto/widgets/qwebengineview/tst_qwebengineview.qrc
@@ -5,5 +5,6 @@
         <file>resources/input_types.html</file>
         <file>resources/scrolltest_page.html</file>
         <file>resources/basic_printing_page.html</file>
+        <file>resources/keyboardEvents.html</file>
     </qresource>
 </RCC>
