Doc: Mark generated license pages as attribution docs
This allows the Qt WebEngine licensing documentation to be listed
as part of the output for '\generatelist annotatedattributions'.

Change-Id: Ief91ec5f414c66a8a14c8b4e323cddac87837f58
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/tools/about_credits_entry.tmpl
+++ b/tools/about_credits_entry.tmpl
@@ -1,6 +1,6 @@
 /*!
 \contentspage qtwebengine-licensing.html
-\page qtwebengine-3rdparty-{{name-sanitized}}.html
+\page qtwebengine-3rdparty-{{name-sanitized}}.html attribution
 \ingroup qtwebengine-licensing
 \brief {{license-type}}
 \title {{name}}
