--- a/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
+++ b/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
@@ -1,12 +1,13 @@
 <RCC>
     <qresource prefix="/">
-        <file>addtab.png</file>
-        <file>defaulticon.png</file>
-        <file>closetab.png</file>
+        <file>AppLogoColor.png</file>
+        <file>dialog-error.png</file>
+        <file>edit-clear.png</file>
+        <file>go-bottom.png</file>
         <file>go-next.png</file>
         <file>go-previous.png</file>
         <file>process-stop.png</file>
-        <file>simplebrowser.svg</file>
+        <file>text-html.png</file>
         <file>view-refresh.png</file>
     </qresource>
 </RCC>
