Properly document third party code in examples
Move files from marked, markdown.css to a 3rdparty directory,
and properly document them with a qt_attribution.json file.
Finally, reference the (automatically generated) documentation
in the respective examples documentation.

Task-number: QTBUG-61706
Change-Id: I8fd3f894e6e81647bc4804df784b1e00b83d12d6
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
+++ b/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
@@ -2,8 +2,8 @@
     <qresource prefix="/">
         <file>index.html</file>
         <file>qwebchannel.js</file>
-        <file>marked.min.js</file>
+        <file>3rdparty/marked.min.js</file>
         <file>default.md</file>
-        <file>markdown.css</file>
+        <file>3rdparty/markdown.css</file>
     </qresource>
 </RCC>
