Add ninja icon to simplebrowser
Task-number: QTBUG-65944
Change-Id: Ie30f2088ca3be90a75d3592433f0c6cf56381dde
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
+++ b/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
@@ -9,5 +9,6 @@
         <file>process-stop.png</file>
         <file>text-html.png</file>
         <file>view-refresh.png</file>
+        <file>ninja.png</file>
     </qresource>
 </RCC>
