Add tst_qwebenginescript loadEvents
Replace injectionPoint test with a timeout-less version that uses

- both a single-frame and a multi-frame page
- both main and isolated worlds
- cross-process navigation
- window.open
- profile-wide scripts

Task-number: QTBUG-66338
Change-Id: Ica4acb8ada4acc38aa5e1ca00e7512a2e69b785f
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/tests/auto/widgets/qwebenginescript/tst_qwebenginescript.qrc
+++ b/tests/auto/widgets/qwebenginescript/tst_qwebenginescript.qrc
@@ -3,5 +3,6 @@
     <file>resources/test_iframe_main.html</file>
     <file>resources/test_iframe_outer.html</file>
     <file>resources/test_iframe_inner.html</file>
+    <file>resources/test_window_open.html</file>
 </qresource>
 </RCC>
