Add tests of Web Workers over local and custom schemes
Shared workers work, service workers don't. Dedicated workers over custom
schemes trigger the same serialization error as WebSockets.

Task-number: QTBUG-62536
Change-Id: I97b4b8c267f6cfca74bc0abfcca905b0adeabe3d
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/origins/tst_origins.qrc
+++ b/tests/auto/widgets/origins/tst_origins.qrc
@@ -1,9 +1,15 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
 <qresource>
+    <file>resources/dedicatedWorker.html</file>
+    <file>resources/dedicatedWorker.js</file>
     <file>resources/mixed_frame.html</file>
     <file>resources/mixed_qrc.html</file>
     <file>resources/mixed_tst.html</file>
+    <file>resources/serviceWorker.html</file>
+    <file>resources/serviceWorker.js</file>
+    <file>resources/sharedWorker.html</file>
+    <file>resources/sharedWorker.js</file>
     <file>resources/subdir/frame2.html</file>
     <file>resources/subdir/index.html</file>
     <file>resources/subdir_frame1.html</file>
