--- a/tests/auto/widgets/qwebenginescript/tst_qwebenginescript.qrc
+++ b/tests/auto/widgets/qwebenginescript/tst_qwebenginescript.qrc
@@ -4,5 +4,6 @@
     <file>resources/test_iframe_outer.html</file>
     <file>resources/test_iframe_inner.html</file>
     <file>resources/test_window_open.html</file>
+    <file>resources/webChannelWithBadString.html</file>
 </qresource>
 </RCC>
