Update 3rd party code in markdown example
Update to marked 0.3.19. Also include the un-minified
version, so that the code can be read.

[ChangeLog][Third-Party Code] Updated "Marked (WebEngine Markdown Editor
example)" to version 0.3.19.

Change-Id: Ie068d003ec6cfab27803332b4aa12095c6c8a457
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
+++ b/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/">
-        <file>index.html</file>
-        <file>3rdparty/marked.min.js</file>
         <file>default.md</file>
+        <file>index.html</file>
         <file>3rdparty/markdown.css</file>
+        <file>3rdparty/marked.js</file>
     </qresource>
 </RCC>
