Test iframes over file scheme in tst_Origins::mixedSchemes
Add previously missing combinations of schemes to the test.

Task-number: QTBUG-62536
Change-Id: Idee99ba03ee17af056e57dd0b1ecbf1b6bc80dcd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/origins/tst_origins.qrc
+++ b/tests/auto/widgets/origins/tst_origins.qrc
@@ -3,9 +3,8 @@
 <qresource>
     <file>resources/dedicatedWorker.html</file>
     <file>resources/dedicatedWorker.js</file>
+    <file>resources/mixed.html</file>
     <file>resources/mixed_frame.html</file>
-    <file>resources/mixed_qrc.html</file>
-    <file>resources/mixed_tst.html</file>
     <file>resources/serviceWorker.html</file>
     <file>resources/serviceWorker.js</file>
     <file>resources/sharedWorker.html</file>
