--- a/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.qrc
+++ b/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.qrc
@@ -2,6 +2,7 @@
 <qresource>
     <file>resources/basic_printing_page.html</file>
     <file>resources/content.html</file>
+    <file>resources/dynamicFrame.html</file>
     <file>resources/index.html</file>
     <file>resources/frame_a.html</file>
     <file>resources/frame_c.html</file>
