--- a/tests/auto/widgets/origins/tst_origins.qrc
+++ b/tests/auto/widgets/origins/tst_origins.qrc
@@ -3,8 +3,9 @@
 <qresource>
     <file>resources/dedicatedWorker.html</file>
     <file>resources/dedicatedWorker.js</file>
-    <file>resources/mixed.html</file>
-    <file>resources/mixed_frame.html</file>
+    <file>resources/mixedSchemes.html</file>
+    <file>resources/mixedSchemesWithCsp.html</file>
+    <file>resources/mixedSchemes_frame.html</file>
     <file>resources/serviceWorker.html</file>
     <file>resources/serviceWorker.js</file>
     <file>resources/sharedWorker.html</file>
@@ -12,6 +13,7 @@
     <file>resources/subdir/frame2.html</file>
     <file>resources/subdir/index.html</file>
     <file>resources/subdir_frame1.html</file>
+    <file>resources/viewSource.html</file>
     <file>resources/websocket.html</file>
 </qresource>
 </RCC>
