--- a/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
+++ b/examples/webenginewidgets/markdowneditor/resources/markdowneditor.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>index.html</file>
-        <file>3rdparty/marked.min.js</file>
+        <file>3rdparty/marked.js</file>
         <file>default.md</file>
         <file>3rdparty/markdown.css</file>
     </qresource>
