Document Tango icons used in examples
Task-number: QTBUG-62053
Change-Id: I2df300239f4f02bb74f1ec27a74874b3877aabd0
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
+++ b/examples/webenginewidgets/simplebrowser/data/simplebrowser.qrc
@@ -1,14 +1,16 @@
 <RCC>
     <qresource prefix="/">
         <file>AppLogoColor.png</file>
-        <file>dialog-error.png</file>
-        <file>edit-clear.png</file>
-        <file>go-bottom.png</file>
-        <file>go-next.png</file>
-        <file>go-previous.png</file>
-        <file>process-stop.png</file>
-        <file>text-html.png</file>
-        <file>view-refresh.png</file>
         <file>ninja.png</file>
+    </qresource>
+    <qresource prefix="/">
+        <file alias="dialog-error.png">3rdparty/dialog-error.png</file>
+        <file alias="edit-clear.png">3rdparty/edit-clear.png</file>
+        <file alias="go-bottom.png">3rdparty/go-bottom.png</file>
+        <file alias="go-next.png">3rdparty/go-next.png</file>
+        <file alias="go-previous.png">3rdparty/go-previous.png</file>
+        <file alias="process-stop.png">3rdparty/process-stop.png</file>
+        <file alias="text-html.png">3rdparty/text-html.png</file>
+        <file alias="view-refresh.png">3rdparty/view-refresh.png</file>
     </qresource>
 </RCC>
