Web Notifications API
Implements API for end-user notifications.

Co-authored by Allan Sandfeld Jensen

[ChangeLog][Profile] Support for Web Notifications API
for end-user notifications through QWebEngineNotification

Task-number: QTBUG-50995
Fixes: QTBUG-51191
Change-Id: Icebaaa05275a713e801f1f8ecdaaec725fa264c8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.qrc
+++ b/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.qrc
@@ -23,4 +23,7 @@
     <file>resources/bar.txt</file>
     <file>resources/path with spaces.txt</file>
 </qresource>
+<qresource prefix='/shared'>
+    <file alias='notification.html'>../../shared/data/notification.html</file>
+</qresource>
 </RCC>
