--- a/examples/pdf/pdfviewer/viewer.qrc
+++ b/examples/pdf/pdfviewer/viewer.qrc
@@ -4,6 +4,8 @@
         <file>resources/edit-clear.svg</file>
         <file>resources/go-next-view-page.svg</file>
         <file>resources/go-previous-view-page.svg</file>
+        <file>resources/rotate-left.svg</file>
+        <file>resources/rotate-right.svg</file>
         <file>resources/zoom-in.svg</file>
         <file>resources/zoom-original.svg</file>
         <file>resources/zoom-out.svg</file>
