--- a/examples/pdf/pdfviewer/viewer.qrc
+++ b/examples/pdf/pdfviewer/viewer.qrc
@@ -8,6 +8,8 @@
         <file>resources/rotate-left.svg</file>
         <file>resources/rotate-right.svg</file>
         <file>resources/zoom-in.svg</file>
+        <file>resources/zoom-fit-best.svg</file>
+        <file>resources/zoom-fit-width.svg</file>
         <file>resources/zoom-original.svg</file>
         <file>resources/zoom-out.svg</file>
         <file>resources/document-open.svg</file>
