--- a/src/pdf/quick/resources.qrc
+++ b/src/pdf/quick/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/qt-project.org/qtpdf">
+    <file>qml/PdfMultiPageView.qml</file>
     <file>qml/PdfPageView.qml</file>
   </qresource>
 </RCC>
