--- a/examples/pdf/pdfviewer/viewer.qrc
+++ b/examples/pdf/pdfviewer/viewer.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/pdfviewer">
         <file>viewer.qml</file>
         <file>resources/edit-clear.svg</file>
+        <file>resources/edit-copy.svg</file>
         <file>resources/go-next-view-page.svg</file>
         <file>resources/go-previous-view-page.svg</file>
         <file>resources/rotate-left.svg</file>
