PDF multipage viewer: iterate search results
This version still has separate PdfSearchModel instances on each page,
but now there are buttons to iterate and highlight the search results
in order.  When you come to the last result on one page, hitting the
"Find Next" button will jump to the next page, and keep jumping forward
from there until another result is found.  Unfortunately this jumping
takes time if it skips over a lot of pages because of empty search
results.  That seems to be another reason to make PdfSearchModel into a
whole-document search model and use one instance.

Also reorganize PdfMultiPageView.qml's public API into sections
according to functionality rather than by type.

Change-Id: I677a764fcbf231b2656aff8abe7240a27582a696
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/examples/pdf/multipage/viewer.qrc
+++ b/examples/pdf/multipage/viewer.qrc
@@ -3,8 +3,10 @@
         <file>viewer.qml</file>
         <file>resources/edit-clear.svg</file>
         <file>resources/edit-copy.svg</file>
+        <file>resources/go-down-search.svg</file>
         <file>resources/go-next-view-page.svg</file>
         <file>resources/go-previous-view-page.svg</file>
+        <file>resources/go-up-search.svg</file>
         <file>resources/rotate-left.svg</file>
         <file>resources/rotate-right.svg</file>
         <file>resources/zoom-in.svg</file>
