--- a/examples/pdf/pdfviewer/viewer.qrc
+++ b/examples/pdf/pdfviewer/viewer.qrc
@@ -3,8 +3,10 @@
         <file>viewer.qml</file>
         <file>resources/edit-clear.svg</file>
         <file>resources/edit-copy.svg</file>
+        <file>resources/go-down-search.svg</file>
         <file>resources/go-next-view-page.svg</file>
         <file>resources/go-previous-view-page.svg</file>
+        <file>resources/go-up-search.svg</file>
         <file>resources/rotate-left.svg</file>
         <file>resources/rotate-right.svg</file>
         <file>resources/zoom-in.svg</file>
