--- a/examples/pdf/multipage/viewer.qrc
+++ b/examples/pdf/multipage/viewer.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/pdfviewer">
         <file>viewer.qml</file>
+        <file>resources/document-open.svg</file>
         <file>resources/edit-clear.svg</file>
         <file>resources/edit-copy.svg</file>
         <file>resources/go-down-search.svg</file>
@@ -9,11 +10,11 @@
         <file>resources/go-up-search.svg</file>
         <file>resources/rotate-left.svg</file>
         <file>resources/rotate-right.svg</file>
+        <file>resources/test.pdf</file>
         <file>resources/zoom-in.svg</file>
         <file>resources/zoom-fit-best.svg</file>
         <file>resources/zoom-fit-width.svg</file>
         <file>resources/zoom-original.svg</file>
         <file>resources/zoom-out.svg</file>
-        <file>resources/document-open.svg</file>
     </qresource>
 </RCC>
