--- a/src/pdf/quick/resources.qrc
+++ b/src/pdf/quick/resources.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="/qt-project.org/qtpdf">
     <file>qml/PdfMultiPageView.qml</file>
     <file>qml/PdfPageView.qml</file>
+    <file>qml/PdfScrollablePageView.qml</file>
   </qresource>
 </RCC>
