Remove QRC->file special case
It was marked as to be removed for Qt6

Pick-to: 6.2
Change-Id: I059c450aa6e5cad6d48ecdd2667abff21217d7e0
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/tests/auto/core/origins/tst_origins.qrc
+++ b/tests/auto/core/origins/tst_origins.qrc
@@ -18,5 +18,6 @@
     <file>resources/subdir_frame1.html</file>
     <file>resources/viewSource.html</file>
     <file>resources/websocket.html</file>
+    <file>resources/websocket2.html</file>
 </qresource>
 </RCC>
