Update customdialogs example to work with Quick Controls 2
Task-number: QTBUG-93666
Pick-to: 6.2
Change-Id: I3716454d7a0560f58a0e2da363b1d053babe824b
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webengine/customdialogs/customdialogs.qrc
+++ b/examples/webengine/customdialogs/customdialogs.qrc
@@ -2,10 +2,10 @@
     <qresource prefix="/">
         <file>forms/AuthenticationForm.ui.qml</file>
         <file>forms/Authentication.qml</file>
-        <file>forms/Button.qml</file>
         <file>forms/ColorCell.qml</file>
         <file>forms/ColorPickerForm.ui.qml</file>
         <file>forms/ColorPicker.qml</file>
+        <file>forms/CustomButton.qml</file>
         <file>forms/FilePickerForm.ui.qml</file>
         <file>forms/FilePicker.qml</file>
         <file>forms/FileRow.qml</file>
