Port touchbrowser to Qt6
- Touchbrowser is only using QuickControls2.
- Missing resource files are added.

Pick-to: 6.3
Change-Id: Ic8402b1d2daed8906d1244bfab2854d0d8844276
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/manual/quick/touchbrowser/qml.qrc
+++ b/tests/manual/quick/touchbrowser/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>AddressBar.qml</file>
+        <file>MockTouchPoint.qml</file>
+        <file>touchpoint.png</file>
     </qresource>
 </RCC>
