Add testing of redirect by interceptor
Looks the same in the interceptor, but different in the jobs.

Extra combinations not yet tested.

Change-Id: Ib9c34029e5dd293d30380ce42495905fbcab12b7
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/tests/auto/core/origins/resources/redirect.css
+++ b/tests/auto/core/origins/resources/redirect.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'MyWebFont';
-    src: url('redirect1:/resources/Akronim-Regular.woff2') format('woff2');
+    src: url('redirect:redirect-secure/resources/Akronim-Regular.woff2') format('woff2');
 }
 
 body {
